--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </div>
                     <div class="service">
                         <h3 class="n-services"><span class="number">3</span>Diseño web</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui praesentium cumque corrupti debitis sint dolorum laborum. Modi suscipit rem aliquid!<p>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui praesentium cumque corrupti debitis sint dolorum laborum. Modi suscipit rem aliquid! xd<p>
                     </div>
                 </div>
             </div>
