--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
         <nav class="menu-navegacion">
             <a href="#Inicio">Inicio</a>
             <a href="#Servicio">Servicio</a>
-            <a href="#Galeria de temas">Galeria de temas</a>
             <a href="#Galeria">Galeria</a>
             <a href="#Redes Sociales">Redes Sociales</a>
         </nav>
-         <div class="contender head">
-            <h1>¡Hola!, BIENVENIDO </h1>
+         <div class="contenedor head">
+            <h1 class="titulo">¡Hola!, BIENVENIDO </h1>
             <h2>Mi nombre es David y soy desarrollador web junior. Un gusto tenerte por aqui</h2>
             <p class="copy">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
          </div>
@@ -34,7 +33,7 @@
                 <img src="img/Content creation_Isometric.svg " alt="estatua de la libertad">
                 <div class="Team meeting_Isometric.svg">
                     <div class="service">
-                        <h3 class="n-services"><span class="number">1</span>Diseño web</h3>
+                        <h3 class="n-services"><span class="number">1</span>Desarrollo web</h3>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui praesentium cumque corrupti debitis sint dolorum laborum. Modi suscipit rem aliquid!<p>
                     </div>
                     <div class="service">
@@ -42,68 +41,38 @@
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui praesentium cumque corrupti debitis sint dolorum laborum. Modi suscipit rem aliquid!<p>
                     </div>
                     <div class="service">
-                        <h3 class="n-services"><span class="number">3</span>Diseño web</h3>
+                        <h3 class="n-services"><span class="number">3</span>Seguridad web</h3>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui praesentium cumque corrupti debitis sint dolorum laborum. Modi suscipit rem aliquid! xd<p>
                     </div>
                 </div>
             </div>
         </section>
-        <sec class="gallery" id="Galeria de temas">
-            <div class="contenedor">
-                <h2 class="subtitulo">Galeria de temas</h2>
-                <div class="contenedor-galeria-de-temas">
-                  <img src="img/1 (1).jpg" alt="" class="img-galeria">
-                  <img src="img/1 (2).jpg" alt="" class="img-galeria">
-                  <img src="img/1 (3).jpg" alt="" class="img-galeria">
-                  <img src="img/1 (4).jpg" alt="" class="img-galeria">
-                  <img src="img/1 (5).jpg" alt="" class="img-galeria">
-                  <img src="img/1 (6).jpg" alt="" class="img-galeria">
-                  <img src="img/1 (7).jpg" alt="" class="img-galeria">
-                  <img src="img/1 (8).jpg" alt="" class="img-galeria">
-                  <img src="img/1 (9).jpg" alt="" class="img-galeria">
-                  <img src="img/1 (10).jpg" alt="" class="img-galeria">
-                  <img src="img/1 (11).jpg" alt="" class="img-galeria">
-                  <img src="img/1 (12).jpg" alt="" class="img-galeria">
-                  <img src="img/1 (13).jpg" alt="" class="img-galeria">
-                  <img src="img/1 (14).jpg" alt="" class="img-galeria">
-                  <img src="img/1 (15).jpg" alt="" class="img-galeria">
-                  <img src="img/1 (16).jpg" alt="" class="img-galeria">
-                  <img src="img/1 (17).jpg" alt="" class="img-galeria">
-                  <img src="img/1 (18).jpg" alt="" class="img-galeria">
-                  <img src="img/1 (19).jpg" alt="" class="img-galeria">
-                  <img src="img/1 (20).jpg" alt="" class="img-galeria">             
-          
-                </div>
-            </div>
-        </sec>
         <sec class="gallery" id="Galeria">
             <div class="contenedor">
-                <h2 class="subtitulo">Galeria </h2>
+                <h2 class="subtitulo">Galeria</h2>
                 <div class="contenedor-galeria">
-                  <img src="img/2 (1).jpg" alt="" class="img-galeria" width="700">
-                  <img src="img/2 (2).jpg" alt="" class="img-galeria" width="700">
-                  <img src="img/2 (3).jpg" alt="" class="img-galeria" width="700">
-                  <img src="img/2 (4).jpg" alt="" class="img-galeria" width="700">
-                  <img src="img/2 (5).jpg" alt="" class="img-galeria" width="700">
-                  <img src="img/2 (6).jpg" alt="" class="img-galeria" width="700">
-                  <img src="img/2 (7).jpg" alt="" class="img-galeria" width="700">
-                  <img src="img/2 (8).jpg" alt="" class="img-galeria" width="700">
-                  <img src="img/2 (9).jpg" alt="" class="img-galeria" width="700">
-                  <img src="img/2 (10).jpg" alt="" class="img-galeria" width="700">
-                  <img src="img/2 (11).jpg" alt="" class="img-galeria" width="700">
-                  <img src="img/2 (12).jpg" alt="" class="img-galeria" width="700">
-                  <img src="img/2 (13).jpg" alt="" class="img-galeria" width="700">
-                  <img src="img/2 (14).jpg" alt="" class="img-galeria" width="700">
-                  <img src="img/2 (15).jpg" alt="" class="img-galeria" width="700">
-                  <img src="img/2 (16).jpg" alt="" class="img-galeria" width="700">
-                  <img src="img/2 (17).jpg" alt="" class="img-galeria" width="700">
-                  <img src="img/2 (18).jpg" alt="" class="img-galeria" width="700">
-                  <img src="img/2 (19).jpg" alt="" class="img-galeria" width="700">
-                  <img src="img/2 (20).jpg" alt="" class="img-galeria" width="700">             
-          
+                  <img src="img/1 (1).jpg" alt="" class="img-galeria" width="500">
+                  <img src="img/1 (2).jpg" alt="" class="img-galeria" width="500">
+                  <img src="img/1 (3).jpg" alt="" class="img-galeria" width="500">
+                  <img src="img/1 (4).jpg" alt="" class="img-galeria" width="500">
+                  <img src="img/1 (5).jpg" alt="" class="img-galeria" width="500">
+                  <img src="img/1 (6).jpg" alt="" class="img-galeria" width="500">
+                  <img src="img/1 (7).jpg" alt="" class="img-galeria" width="500">
+                  <img src="img/1 (8).jpg" alt="" class="img-galeria" width="500">
+                  <img src="img/1 (9).jpg" alt="" class="img-galeria" width="500">
+                  <img src="img/1 (10).jpg" alt="" class="img-galeria" width="500">
+                  <img src="img/1 (11).jpg" alt="" class="img-galeria" width="500">
+                  <img src="img/1 (12).jpg" alt="" class="img-galeria" width="500">
+                  <img src="img/1 (13).jpg" alt="" class="img-galeria" width="500">
+                  <img src="img/1 (14).jpg" alt="" class="img-galeria" width="500">
+                  <img src="img/1 (15).jpg" alt="" class="img-galeria" width="500">
+                  <img src="img/1 (16).jpg" alt="" class="img-galeria" width="500">
+                  <img src="img/1 (17).jpg" alt="" class="img-galeria" width="500">
+                  <img src="img/1 (18).jpg" alt="" class="img-galeria" width="500">
+                  <img src="img/1 (19).jpg" alt="" class="img-galeria" width="500">
+                  <img src="img/1 (20).jpg" alt="" class="img-galeria" width="500">             
                 </div>
             </div>
-        </sec>
         <!--<section class="imagen-light">
             <img src="img/bx-x-circle.svg" alt="" class="close">
             <img src="img/" alt="" class="agregar-imagen">
