cambios despues de mucho tiempo 7w7

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                 <i class='bx bxl-twitter' ></i>
             </a>
         </div>
+        <div class="line"></div>
     </footer>
 
 
