--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eS">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="shortcut icon" href="img/icons8-oak-tree-16.png" type="image/x-icon">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
-    <enlace href="https: //fonts.googleapis.com/css2? family= Open+Sans:wght@300;400;700 & display=swap" rel="stylesheet">
+    <enlace rel="preconectar" href="https://fonts.googleapis.com">
+        <enlace rel="preconectar" href="https://fonts.gstatic.com" crossorigin>
+        <enlace href="https: //fonts.googleapis.com/css2? family= Annie+Use+Tu+Telescopio & family= BioRhyme & display=swap" rel="stylesheet">
 </head>
-
 <body>
     <header class="header" id="inicio">
         <img src="img/bx-hamburguesa.svg" alt="" class="hamburguer">
@@ -20,11 +21,19 @@
             <a href="#Galeria">Galeria</a>
             <a href="#Redes Sociales">Redes Sociales</a>
         </nav>
+        <section class="inicio" id="Inicio">
          <div class="contenedor head">
-            <h1 class="titulo">¡Hola!, BIENVENIDO </h1>
-            <h2>Mi nombre es David y soy desarrollador web junior. Un gusto tenerte por aqui</h2>
-            <p class="copy">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+            <h1 class="titulo">David Fact</h1>
+            <h2>Mi nombre es David,soy desarrollador web junior y en David Fact ofrecemos tres servicios:
+                <ol>
+                    <li>Desarrollo web</li>
+                    <li>Diseño web</li>
+                    <li>Seguridad web</li>
+                </ol>
+            </h2>
+            <p class="copy"></p>
          </div>
+        </section>
     </header>
     <main>
         <section class="servicios-contenedor" id="Servicio">
@@ -33,17 +42,17 @@
                 <img src="img/Content creation_Isometric.svg " alt="estatua de la libertad">
                 <div class="Team meeting_Isometric.svg">
                     <div class="service">
-                        <h3 class="n-services"><span class="number">1</span>Desarrollo web</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui praesentium cumque corrupti debitis sint dolorum laborum. Modi suscipit rem aliquid!<p>
+                        <h2 class="n-services"><span class="number">1</span>Desarrollo web</h2>
+                        <p><h3>El desarrollo es importante para tu empresa y en David Fact lo tenemos siempre presente por eso somos la mejor opcion para ti y tu empresa<3</h3><p>
                     </div>
                     <div class="service">
-                        <h3 class="n-services"><span class="number">2</span>Diseño web</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui praesentium cumque corrupti debitis sint dolorum laborum. Modi suscipit rem aliquid!<p>
+                        <h2 class="n-services"><span class="number">2</span>Diseño web</h2>
+                        <p><h3>El personal de diseño web y grafico de David Fact tu empresa sera como la soñaste.Sueña algo y tranquilo, que nosootros lo cumplimos</h3> <p>
                     </div>
                     <div class="service">
-                        <h3 class="n-services"><span class="number">3</span>Seguridad web</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui praesentium cumque corrupti debitis sint dolorum laborum. Modi suscipit rem aliquid! xd<p>
-                    </div>
+                        <h2 class="n-services"><span class="number">3</span>Seguridad web</h2>
+                        <p><h3>!Cuidado donde das click¡ La seguridad de tu empresa es tan importante como el desarrollo y su diseño, es por ello que en David Fact la tomamos muy enserio dandote siempre el 100% de nuestra proteccion </h3><p>
+                        </div>
                 </div>
             </div>
         </section>
@@ -82,10 +91,10 @@
         <div class="contenedor footer-content">
             <div class="conact-us">
             </div>
-            <h2 class="brand">DavidESR</h2>
-                <p>Soy programador web junior y estos son mis primeros pasos:)</p>
+            <h2 class="brand">David Fact</h2>
+                <p><h2>Encuentranos en las siguientes redes sociales como @DavidFact777</h2></p>
         </div>
-        <div class="Redes Sociales">
+        <div class="Redes Sociales" id="Redes Sociales">
             <a href="./" class="Redes-Sociales-icon">
                 <i class='bx bxl-facebook'></i>
             </a>
@@ -102,11 +111,7 @@
                 <i class='bx bxl-twitter' ></i>
             </a>
         </div>
-        <div class="line"></div>
     </footer>
-
-
-
     <script src="js/menu.js"></script>
     <script src="js/lightbox.js"></script>
 </body>
